--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,6 +48,36 @@ body {
   font-size: var(--body-text);
 }
 
+h1 {
+  font-size: 2.75rem; /* 44px */
+  line-height: 3rem;
+}
+
+h2 {
+  font-size: 2rem; /* 32px */
+  line-height: 2.25rem; /* 36px */
+}
+
+h3 {
+  font-size: 1.75rem; /* 28px */
+  line-height: 2rem; /* 32px */
+}
+
+h4 {
+  font-size: 1.5rem; /* 24px */
+  line-height: 1.75rem; /* 28px */
+}
+
+h5 {
+  font-size: 1.125rem; /* 18px */
+  line-height: 1.375rem; /* 22px */
+}
+
+h6 {
+  font-size: 0.875rem; /* 32px */
+  line-height: 1.375rem; /* 36px */
+}
+
 .container {
   max-width: 80rem;
   margin: 0 auto;
