--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -311,6 +311,22 @@ input:focus {
   font-weight: 400;
   line-height: 170%;
 }
+
+.btn_register {
+  background-color: var(--color-black);
+  padding: 12px 20px;
+  border: none;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  color: #fff;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 12px;
+}
 /* Reusable Form */
 
 .tla-form-control {
@@ -571,9 +587,10 @@ input:focus {
   font-style: normal;
   font-weight: 500;
   line-height: 21px;
+  font-family: var(--font-poppins), sans-serif;
 }
 
-.btn_register {
+.btn-register {
   background-color: var(--secondary-color);
   padding: 16px 20px;
   border: none;
