--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,13 +57,13 @@ body {
 }
 
 h1 {
-  font-size: 2.75rem; /* 44px */
-  line-height: 3rem;
+  font-size: clamp(2rem, 4vw, 3rem); /* 44px */
+  line-height: clamp(2.5rem, 4vw, 3.75rem); /* 60px */
 }
 
 h2 {
-  font-size: 2rem; /* 32px */
-  line-height: 2.25rem; /* 36px */
+  font-size: clamp(1.5rem, 4vw, 2rem); /* 32px */
+  line-height: clamp(2rem, 4vw, 2.25rem); /* 36px */
 }
 
 h3 {
