--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,7 +1,7 @@
 :root {
   /* --body-text: clamp(0.8rem, 0.9vw, 1rem); */
   --subtitle: 0.875rem;
-  --title: 2.25rem;
+  --title: clamp(1.5rem, 4vw, 2.25rem);
   /* --hero-title: clamp(2.2rem, 3vw, 3.5rem); */
   --hero-title: 3rem;
 }
@@ -317,7 +317,6 @@ input:focus {
   padding: 12px 20px;
   border: none;
   border-radius: 5px;
-  display: flex;
   justify-content: center;
   align-items: center;
   gap: 10px;
@@ -578,9 +577,6 @@ input:focus {
 /* Auth End */
 
 .nav_link {
-  display: flex;
-  align-items: center;
-  gap: 5px;
   color: var(--color-black);
   text-align: center;
   font-family: Inter;
@@ -595,7 +591,6 @@ input:focus {
   padding: 16px 20px;
   border: none;
   border-radius: 5px;
-  display: flex;
   justify-content: center;
   align-items: center;
   color: #fff;
